# voiceloop

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
prompts/: meeting_minutes.md  weekly.md
src/voiceloop/: __init__.py  asr.py  cli.py  config.py  cron.py  kimi_client.py  postprocess.py  rename.py  sync.py  watch.py  weekly.py
tests/: test_config.py  test_rename.py  test_sync.py
